--- a/app/assets/stylesheets/toggle.css
+++ b/app/assets/stylesheets/toggle.css
@@ -1,5 +1,5 @@
 .onoffswitch {
-    position: relative; width: 155px;
+    position: relative; width: 95px;
     -webkit-user-select:none; -moz-user-select:none; -ms-user-select: none;
 }
 .onoffswitch-checkbox {
@@ -7,34 +7,36 @@
 }
 .onoffswitch-label {
     display: block; overflow: hidden; cursor: pointer;
-    border: 2px solid #999999; border-radius: 25px;
+    border: 1px solid #ccc; border-radius: 20px;
 }
 .onoffswitch-inner {
     display: block; width: 200%; margin-left: -100%;
     transition: margin 0.3s ease-in 0s;
 }
 .onoffswitch-inner:before, .onoffswitch-inner:after {
-    display: block; float: left; width: 50%; height: 40px; padding: 0; line-height: 40px;
+    display: block; float: left; width: 50%; height: 30px; padding: 0; line-height: 30px;
     font-size: 14px; color: white; font-family: Trebuchet, Arial, sans-serif; font-weight: bold;
     box-sizing: border-box;
 }
 .onoffswitch-inner:before {
-    content: "CENSORED";
+    font-family: 'Montserrat', sans-serif;
+    content: "Clean";
     padding-left: 10px;
-    background-color: #4CAF50; color: #FFFFFF;
+    background-color: #8065b2; color: #FFFFFF;
 }
 .onoffswitch-inner:after {
-    content: "UNCENSORED";
+    font-family: 'Montserrat', sans-serif;
+    content: "Explicit";
     padding-right: 10px;
-    background-color: #EDEDED; color: #878787;
+    background-color: #EEEEEE; color: #999999;
     text-align: right;
 }
 .onoffswitch-switch {
-    display: block; width: 26px; margin: 7px;
+    display: block; width: 20px; margin: 6px;
     background: #FFFFFF;
     position: absolute; top: 0; bottom: 0;
-    right: 111px;
-    border: 2px solid #999999; border-radius: 25px;
+    right: 61px;
+    border: 1px solid #ccc; border-radius: 20px;
     transition: all 0.3s ease-in 0s;
 }
 .onoffswitch-checkbox:checked + .onoffswitch-label .onoffswitch-inner {
